# SFML-Logo-Maker

./: BarSets.cpp  BarSets.h  CMakeLists.txt  ColorList.cpp  ColorList.h  ColorPicker.cpp  ColorPicker.h  EventHandler.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  FontList.cpp  FontList.h  GuiComponent.cpp  GuiComponent.h  History.h  Image.cpp  Image.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  Logo.cpp  Logo.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuFunctionalities.cpp  MenuFunctionalities.h  README.md  Saved.txt  SlideBar.cpp  SlideBar.h  SwitchMenu.cpp  SwitchMenu.h  TextInput.cpp  TextInput.h  gardientBox.cpp  (+14 more)
